5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1716_2503.log
== TEST (2019-05-15 15:16:57) 
-- CODE:
n=int(input("valor de n: "))
sinal=1
denominador=1
cont=0
r=1
while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2
print(round(r, 8))	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:17:11) 
-- CODE:
n=int(input("valor de n: "))
sinal=1
denominador=1
cont=0
r=1
while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2

print(round(r, 8))	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:17:39) 
-- CODE:
n=int(input("valor de n: "))
sinal=1
denominador=1
cont=0
r=0
while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2

print(round(r, 8))	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:26) 
-- CODE:
n=int(input("valor de n: "))
r=0
sinal=1
denominador=1
cont=0

while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2

print(round(r, 8))	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:50) 
-- CODE:
n=int(input("valor de n: "))
r=0
sinal=1
denominador=1
cont=0

while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2

print(r)	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:59) 
-- CODE:
n=int(input("valor de n: "))
r=0
sinal=1
denominador=1
cont=0

while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2

print(r)	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:03) 
-- CODE:
n=int(input("valor de n: "))
cont=0
r=0
sinal=1
denominador=1

while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2
	cont=cont+1
print(r)	
-- OUTPUT:
3.1342398117921664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:08) 
-- CODE:
n=int(input("valor de n: "))
cont=0
r=0
sinal=1
denominador=1

while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2
	cont=cont+1
print(r)	
-- OUTPUT:
3.1342398117921664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:20:12) 
-- CODE:
n=int(input("valor de n: "))
cont=0
r=0
sinal=1
denominador=1

while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2
	cont=cont+1
print(r)	
-- EXECUTION TIME:
0.208966
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.1342398117921664
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.0961615264636424
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.208185652261944
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:20:26) 
-- CODE:
n=int(input("valor de n: "))
cont=0
r=0
sinal=1
denominador=1

while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2
	cont=cont+1
print(round(r, 8)	
-- EXECUTION TIME:
0.187557
-- ERROR:
  File "/home/codebench/codes/1716/2503/main.py", line 13
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:33) 
-- CODE:
n=int(input("valor de n: "))
cont=0
r=0
sinal=1
denominador=1

while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2
	cont=cont+1

print(round(r, 8)	
-- ERROR:
File "XXXX", line 14
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:40) 
-- CODE:
n=int(input("valor de n: "))
cont=0
r=0
sinal=1
denominador=1

while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2
	cont=cont+1

print(round(r, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:43) 
-- CODE:
n=int(input("valor de n: "))
cont=0
r=0
sinal=1
denominador=1

while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2
	cont=cont+1

print(round(r, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:47) 
-- CODE:
n=int(input("valor de n: "))
cont=0
r=0
sinal=1
denominador=1

while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2
	cont=cont+1

print(round(r, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:20:51) 
-- CODE:
n=int(input("valor de n: "))
cont=0
r=0
sinal=1
denominador=1

while(cont<n):
	r=r+(sinal*4/denominador)
	sinal=sinal*(-1)
	denominador=denominador+2
	cont=cont+1

print(round(r, 8))
-- EXECUTION TIME:
0.169483
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
